@@ -12,7 +12,7 @@ public class DepartmentsTest {
     @Test
     public void whenFillGapsMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -20,7 +20,7 @@ public class DepartmentsTest {
     @Test
     public void whenFillGapsNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -37,7 +37,7 @@ public class DepartmentsTest {
                 "K1/SK1/SSK1",
                 "K2/SK1",
                 "K2/SK1/SSK2");
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -63,7 +63,7 @@ public class DepartmentsTest {
                 "K1/SK1/SSK1",
                 "K2/SK1",
                 "K2/SK1/SSK2");
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
